[package]
name = "nullpad"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Redis storage
redis = { version = "1", features = ["tokio-comp", "aio"] }

# Cryptography & authentication
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.9"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }

# ID generation
nanoid = "0.4"

# Configuration
dotenvy = "0.15"

# Error handling
thiserror = "2"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
