[package]
name = "nullpad"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8.8", features = ["multipart"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Redis storage
redis = { version = "1.0.3", features = ["tokio-comp", "aio"] }

# Cryptography & authentication
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.9.2"
base64 = "0.22.1"
zeroize = { version = "1.8", features = ["derive"] }

# ID generation
nanoid = "0.4.0"

# Configuration
dotenvy = "0.15.7"

# Error handling
thiserror = "2.0.18"

# Logging & tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
panic = "abort"
strip = true
lto = true

[dev-dependencies]
reqwest = { version = "0.13.1", features = ["json", "multipart"] }
